syntax = "proto3";

option java_package = "org.octopus.proto.rpc";

import "google/protobuf/any.proto";

message RpcRequest {
    string service = 1;
    string method = 2;
    repeated google.protobuf.Any args = 3;
}


enum RpcStatus {
    OK = 0;
    FAILURE = 1;

}

message RpcResponse {
    RpcStatus status = 1;
    google.protobuf.Any result = 2;
    string reason = 3;
}

